--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   "license": "MIT",
   "dependencies": {
     "express": "^5.1.0",
-    "pg-promise": "^12.1.3"
+    "pg": "^8.16.3",
+    "pg-hstore": "^2.3.4",
+    "pg-promise": "^12.1.3",
+    "sequelize": "^6.37.7"
   }
 }
