--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "author": "Ped&Rom",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
     "pg-promise": "^12.1.3",
