--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "Ped&Rom",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
